<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dvn.vindecoder.ui.SignUpAsBuyer">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"

        >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
     android:layout_margin="10sp"
        android:orientation="vertical"
        android:background="@color/WHITE"
        android:id="@+id/linearLayout2">
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="5sp"
         android:weightSum="2">
         <LinearLayout
             android:layout_width="150sp"
             android:layout_height="wrap_content"
             android:layout_weight="1">
             <EditText
                 android:id="@+id/etUsername"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/_name"
                 android:inputType="text"
                 android:padding="10sp"
                 android:maxLines="1"
                 android:textColor="@color/button_color_edit_text"

                 android:singleLine="true">

             </EditText>
         </LinearLayout>
         <LinearLayout
             android:layout_width="150sp"
             android:layout_height="wrap_content"
             android:layout_weight="1">
             <EditText
                 android:id="@+id/etUserLastname"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="10sp"
                 android:hint="@string/last_name"
                 android:inputType="text"
                 android:maxLines="1"
                 android:textColor="@color/button_color_edit_text"

                 android:singleLine="true">
             </EditText>
         </LinearLayout>

            <!--    </android.support.design.widget.TextInputLayout>-->
     </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5sp"
            android:weightSum="2">
            <LinearLayout
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/etEmailname"
                    android:padding="10sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_email_id"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@color/button_color_edit_text"

                    android:singleLine="true">

                </EditText>
            </LinearLayout>
            <LinearLayout
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/etcontactnumber"
                    android:padding="10sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contact_number"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="@color/button_color_edit_text"

                    android:singleLine="true">
                </EditText>
            </LinearLayout>

            <!--    </android.support.design.widget.TextInputLayout>-->
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5sp"
            android:weightSum="2">
            <LinearLayout
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/et_seller_number"
                    android:padding="10sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/seller_number"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="@color/button_color_edit_text"

                    android:singleLine="true">

                </EditText>
            </LinearLayout>
            <LinearLayout
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/et_tax_number"
                    android:padding="10sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/_gst"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="@color/button_color_edit_text"

                    android:singleLine="true">
                </EditText>
            </LinearLayout>

            <!--    </android.support.design.widget.TextInputLayout>-->
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5sp"
           >
            <LinearLayout
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/etland_line"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Land Line Number"
                    android:padding="10sp"
                    android:inputType="number"
                    android:maxLines="1"

                    android:textColor="@color/button_color_edit_text"
                    android:singleLine="true">

                </EditText>
            </LinearLayout>


            <!--    </android.support.design.widget.TextInputLayout>-->
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5sp"
          >
            <LinearLayout
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/etAddress"
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:hint="@string/_address"
                    android:padding="10sp"
                    android:inputType="text"
                    android:maxLines="3"
                    android:gravity="left|top"
                    android:maxLength="150"
                    android:textColor="@color/button_color_edit_text"
                    >

                </EditText>
            </LinearLayout>


            <!--    </android.support.design.widget.TextInputLayout>-->
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5sp"
            android:weightSum="2">
            <LinearLayout
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:padding="10sp"
                    android:maxLines="1"
                    android:textColor="@color/button_color_edit_text"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/etCPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_conf_password"
                    android:inputType="textPassword"
                    android:padding="10sp"
                    android:maxLines="1"
                    android:textColor="@color/button_color_edit_text"
                    />
            </LinearLayout>

            <!--    </android.support.design.widget.TextInputLayout>-->
        </TableRow>












        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_btn"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/WHITE"
            android:id="@+id/signUp_btn"

            android:layout_marginTop="20dp"

            android:background="@color/back_dark_blue"
            />

    </TableLayout>
    </ScrollView>

</RelativeLayout>


