<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@mipmap/login_back"
    tools:context=".ui.LoginActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/logo_login"
        android:layout_marginTop="70sp"
        android:id="@+id/imageView7" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/white_spinner_bg"
        android:id="@+id/linearLayout3"
        android:layout_below="@+id/imageView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black_white_color"
            >


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/text_login"
                android:textSize="20sp"
                android:layout_marginTop="2sp"
                android:layout_marginLeft="2sp"
                android:layout_marginRight="2sp"
                android:padding="10sp"
                android:gravity="center"
                android:textColor="@color/BLACK"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_color"
        android:paddingLeft="20sp"
            android:paddingRight="20sp"
            >


           <EditText
               android:id="@+id/etUsername"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/enter_email_id"
               android:inputType="textEmailAddress"
               android:maxLines="1"
               android:textStyle="italic"
               android:drawablePadding="5sp"
               android:layout_gravity="center_vertical"
               android:drawableLeft="@mipmap/user"
               android:drawableTint="@color/BLACK"

               android:textColor="@color/button_color_edit_text"

               >

           </EditText>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_color"
            android:layout_marginTop="10dp"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            >



               <EditText
                   android:id="@+id/etPassword"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/enter_password"
                   android:maxLines="1"
                   android:drawablePadding="5sp"
                   android:drawableLeft="@mipmap/iconpws"
                   android:textStyle="italic"
                   android:drawableTint="@color/BLACK"
                   android:inputType="textPassword"
                   android:textColor="@color/button_color_edit_text"

                   />


        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:id="@+id/login_btn"
            android:layout_marginTop="15dp"
            android:background="@color/button_background_login_color"
            />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            android:paddingBottom="20sp"
            android:layout_gravity="center"
            android:layout_marginTop="19dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/dont_have_ac"
                android:textSize="15sp"
                android:textColor="@color/BLACK"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=" Sign up"
                android:id="@+id/sign_up_btn"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/button_background_login_color"
                />
        </LinearLayout>
    </LinearLayout>



<VideoView
    android:layout_width="match_parent"
    android:layout_height="140sp"
    android:id="@+id/video_view"
    android:layout_below="@+id/linearLayout3"
    android:layout_alignParentBottom="true" />




</RelativeLayout>
